gitops/platform-apps/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden.__ZONE_NAME__`)
      services:
        - kind: Service
          name: vaultwarden
          port: 80
  tls: {}
